@startuml
'https://plantuml.com/class-diagram

abstract SinhVienNTU{
    - String hoTen
    - String nganh
    + SinhVienNTU(hoTen, nganh)
    + {abstract} getDiemTB()
    + String getHocLuc()
    + void inThonTin()
}

class SinhVienIT{
    - float diemJava, diemCSS, diemHTML
}

class SinhVienBiz{
    - float diemMarketing, diemSales
}

SinhVienNTU <|-- SinhVienIT
SinhVienNTU <|-- SinhVienBiz


@enduml